Thu Jun  9 07:05:59 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

        * orbsvcs/examples/FaultTolerance/RolyPoly/client.cpp:
        * orbsvcs/tests/Bug_2709_Regression/Client_Task.cpp:
          Fixed gcc 4.6 warnings

Thu Jun  9 01:09:40 UTC 2011  Douglas C. Schmidt  <schmidt@dre.vanderbilt.edu>

        * orbsvcs/orbsvcs/Notify/ThreadPool_Task.cpp (TAO_Notify_ThreadPool_Task::execute):
          Fixed a memory leak that occurred when the enqueue() failed.
          Thanks to Jochen Meier <gesammeltimusenet2009 at arcor dot de> for
          reporting this and suggesting a fix.

Mon Jun  6 19:53:54 UTC 2011  Jeff Parsons <j.parsons@vanderbilt.edu>

        * tao/AnyTypeCode/Any_Basic_Impl.cpp:
        * tao/AnyTypeCode/Any_Basic_Impl.h:

          Restored the long double member back to the member union of
          Any_Basic_Impl. A change suggested by Adam Mitz <mitza at
          ociweb dot com> enabled the use of the LongDouble emulator
          struct without constructors or assignment operators.

        * TAO_IDL/be/be_visitor_constant/constant_ch.cpp:
        * TAO_IDL/be/be_visitor_constant/constant_cs.cpp:

          Changed code generation for long double constant initialization,
          when 16-byte native long double does not exist, to use the
          new LongDoubleAssign struct in ACE_CDR.

        * tests/IDL_Test/union.idl:

          Added a test case of a union containing a long double, to
          test that the generated union doesn't contain a member
          with a constructor.

Mon Jun  6 18:59:41 UTC 2011  Jeff Parsons <j.parsons@vanderbilt.edu>

        * TAO_IDL/be/be_helper.cpp:

          Restored minimum significant digit suggestions for the format
          string for double, and added them to the format string for
          long double.

Mon Jun  6 17:28:05 UTC 2011  Jeff Parsons <j.parsons@vanderbilt.edu>

        * tao/AnyTypeCode/Any_Basic_Impl.cpp:
        * tao/AnyTypeCode/Any_Basic_Impl.h:
