@@ -85,7 +85,6 @@ be_visitor_constant_cs::visit_constant (be_constant *node)
     {
       // For those constants not defined in the outermost scope,
       // or in a module, they get assigned to their values in the source file.
-#if defined (NONNATIVE_LONGDOUBLE)
       if (etype == AST_Expression::EV_longdouble)
         {
           *os << " (" << be_idt_nl
@@ -96,9 +95,6 @@ be_visitor_constant_cs::visit_constant (be_constant *node)
         {
           *os << " = " << node->constant_value ();
         }
-#else
-      *os << " = " << node->constant_value ();
-#endif // defined (NONNATIVE_LONGDOUBLE)
     }
 
   *os << ";";
