@@ -1,3 +1,11 @@
+Thu Jun  9 17:28:25 UTC 2011  Jeff Parsons <j.parsons@vanderbilt.edu>
+
+        * TAO_IDL/be/be_visitor_constant/constant_ch.cpp:
+        * TAO_IDL/be/be_visitor_constant/constant_cs.cpp:
+
+          Changed generated code to always use a constructor with an
+          ACE_CDR::LongDoubleAssign argument for long double constants.
+
 Thu Jun  9 07:05:59 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * orbsvcs/examples/FaultTolerance/RolyPoly/client.cpp:
